syntax = "proto3";
package common;

message Asset {  
    string code = 1;  
    string issuer = 2;  
    uint32 decimal = 3;
    string typeID = 4;
}